@@ -285,15 +285,23 @@ namespace MonoDevelop.SourceEditor
 			
 			bool IsInsideMember (FoldSegment marker, MonoDevelop.Projects.Parser.FoldingRegion region, IClass cl)
 			{
+				if (region == null)
+					return false;
 				foreach (IMethod m in cl.Methods) {
+					if (m.BodyRegion == null)
+						continue;
 					if (m.BodyRegion.BeginLine <=  region.Region.BeginLine && region.Region.BeginLine <= m.BodyRegion.EndLine) 
 						return true;
 				}
 				foreach (IProperty p in cl.Properties) {
+					if (p.BodyRegion == null)
+						continue;
 					if (p.BodyRegion.BeginLine <=  region.Region.BeginLine && region.Region.BeginLine <= p.BodyRegion.EndLine) 
 						return true;
 				}
 				foreach (IIndexer i in cl.Indexer) {
+					if (i.BodyRegion == null)
+						continue;
 					if (i.BodyRegion.BeginLine <=  region.Region.BeginLine && region.Region.BeginLine <= i.BodyRegion.EndLine) 
 						return true;
 				}
